gcc/testsuite/rust/rustc/ui/resolve/resolve-hint-macro.rs
fn main() {
    assert(true);
// { dg-error ".E0423." "" { target *-*-* } .-1 }
}

